# cpu-docparse

./: .gitignore  README.md  doc_parse_benchmark.py  doc_parser_openvino.py  download_models.sh  paddleocr_benchmark.py  phase.md  pyproject.toml  rapidocr_onnxruntime.yaml  rapidocr_openvino.yaml
benchmarks/: doc_parser_v0_paddle.py  platform_benchmark.py  run_benchmark.py
cpu_docparse/: __init__.py  __main__.py  backend.py  parser.py
docs/: amd_zendnn_analysis.md  platform_test_report.md  文档解析服务_技术报告.md
docs/agent/: github-cli-guide.md  issue_amd_x86_64.md  issue_arm64.md  issue_nvidia_gpu.md
scripts/: download_models.sh
